Optimization for landscape mobile devices. Need to fix the rest of news pages.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </div>
 </div>
 
-<div class="section homeSectionTwo">
+<div class="section homeSectionTwo prods">
   <div class="container">
     <div class="row">
       <h1 style="padding-top: 20px;">Products</h1>
@@ -178,16 +178,16 @@
   <div class="col-xs-12" style="color: white; text-align: center;">LCD</div>
 </div>
 
-<div class="section homeSectionThree">
+<div class="section homeSectionThree news">
   <div class="container">
     <div class="row">
       <a href="news/page-1.html" class="newsLink">
       	<h1 style="text-align: center;">News</h1>
       </a>
-      <div class="col-sm-6 col-xs-12" style="padding-bottom: 30px;">
+      <div class="col-sm-4 col-xs-12" style="padding-bottom: 30px;">
         <img class="img-responsive" src="images/news/2017/0720/549 AMOLED Display Module.png" width="100%">
       </div>
-      <div class="col-sm-6 col-xs-12" style="padding-bottom: 30px;">
+      <div class="col-sm-8 col-xs-12" style="padding-bottom: 30px;">
         <h3>5.49" AMOLED Display Module</h3>
         <p>Microtips MTD0550AZOM-T is a 5.49 inch display module with a resolution of 1080(RGB) x 1920. This display is composed of an AMOLED panel, driver ICs, On-cell Touch Panel and FPC.</p>
         <a href="articles/549_AMOLED_Display_Module.html">
