--- a/products.html
+++ b/products.html
@@ -59,7 +59,7 @@
   <h1 class="headerWords">Products</h1>
 </div>
 
-<div class="container">
+<div class="container prods">
   <div class="blueSplitter" style="margin-top: 20px;"></div>
   <div class="row">
     <p style="font-size: 18px; padding: 15px;">Microtips Technology is a leading custom display manufacturer and we offer a full array of products and services. We have the most advances display technologies available to use in your design and if there is anything you want to change about one of our displays, we can make it happen. All of our displays are fully customizable to your specification and can include extra features like a capacitive touchscreen, an anti-reflective or anti-glare coating, or custom cover glass. Our sales and engineering staff will be with you through the entire process and will ensure our display and your end product look their very best.
