--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
   <div class="blueSplitter"></div>
 </div>
 
-<div class="container">
+<div class="container team">
   <h1>Meet the Team</h1>
   <div class="row">
     <div class="col-sm-4 col-xs-12 meetTeam2">
