more mobile optimization. Fixed a couple headshots and added Grace

--- a/allProducts.html
+++ b/allProducts.html
@@ -17,7 +17,7 @@
       function load() { if (window.location.hash) shiftWindow(); }
     } 
     else {
-      var shiftWindow = function() { scrollBy(0, -100) };
+      var shiftWindow = function() { scrollBy(0, -80) };
       window.addEventListener("hashchange", shiftWindow);
       function load() { if (window.location.hash) shiftWindow(); }
     }
@@ -67,9 +67,7 @@
   </nav>
 </div>
 
-<div class="col-xs-12" style="height: 90px;"></div>
-
-<div class="navbar nav">
+<div class="navbar nav" style="margin-top: 100px;">
   <div class="tabbable"> <!-- Only required for left/right tabs -->
     <div class="container">
       <ul class="nav nav-tabs nav-justified">
@@ -131,7 +129,7 @@
               </tr>
             </table>
 
-            <div class="row" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
+            <div class="row prods" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
               <div class="col-xs-12 col-sm-6">
                 <div id="tftCarousel" class="carousel slide" data-ride="carousel">
                   <!-- Indicators -->
@@ -166,8 +164,8 @@
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6">
-                <h1 style="font-size: 70px; padding-top: 10px;">TFT LCD</h1>
-                <h4>Displays capable of showing full color graphics using Thin-Film-Transistor technology<br></h4>
+                <h1 style="font-size: 35px; padding-top: 10px;">TFT LCD</h1>
+                <h4 style="font-size: 15px;">Displays capable of showing full color graphics using Thin-Film-Transistor technology<br></h4>
               </div>
             </div>
           </div>
@@ -319,7 +317,7 @@
               </tr>
             </table>
 
-            <div class="row" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
+            <div class="row prods" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
               <div class="col-xs-12 col-sm-6">
                 <div id="oledCarousel" class="carousel slide" data-ride="carousel">
                   <!-- Indicators -->
@@ -354,8 +352,8 @@
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6">
-                <h1 style="font-size: 70px; padding-top: 10px;">OLED Display</h1>
-                <h4>Displays using Passive Matrix (single color) and Active Matrix (full color) Organic Light Emitting Diode technology capable of showing characters, graphics, or custom icons<br></h4>
+                <h1 style="font-size: 35px; padding-top: 10px;">OLED Display</h1>
+                <h4 style="font-size: 15px;">Displays using Passive Matrix (single color) and Active Matrix (full color) Organic Light Emitting Diode technology capable of showing characters, graphics, or custom icons<br></h4>
               </div>
             </div>
           </div>
@@ -478,13 +476,13 @@
               </tr>
             </table>
 
-            <div class="row" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
+            <div class="row prods" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
               <div class="col-xs-12 col-sm-6">
                 <img src="images/products/touchPanel/tp.png" alt="Img. 1" style="width:100%;">
               </div>
               <div class="col-xs-12 col-sm-6">
-                <h1 style="font-size: 70px; padding-top: 10px;">Touch Panel</h1>
-                <h4>Digital human input devices capable of detecting a user's touch for interface and control of dot-matrix and custom icon modules<br></h4>
+                <h1 style="font-size: 35px; padding-top: 10px;">Touch Panel</h1>
+                <h4 style="font-size: 15px;">Digital human input devices capable of detecting a user's touch for interface and control of dot-matrix and custom icon modules<br></h4>
               </div>
             </div>
           </div>
@@ -604,13 +602,13 @@
               </tr>
             </table>
 
-            <div class="row" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
+            <div class="row prods" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
               <div class="col-xs-12 col-sm-6">
                 <img src="images/products/wirelessPower/airon.png" alt="Img. 1" style="width:100%;">
               </div>
               <div class="col-xs-12 col-sm-6">
-                <h1 style="font-size: 70px; padding-top: 10px;">Wireless Power</h1>
-                <h4>Devices that deliver and recieve power wirelessly using Magnetic Resonance technology capable of charging anything from small devices to full systems</h4>
+                <h1 style="font-size: 35px; padding-top: 10px;">Wireless Power</h1>
+                <h4 style="font-size: 15px;">Devices that deliver and recieve power wirelessly using Magnetic Resonance technology capable of charging anything from small devices to full systems</h4>
               </div>
             </div>
           </div>
@@ -775,7 +773,7 @@
               </tr>
             </table>
 
-            <div class="row" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
+            <div class="row prods" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
               <div class="col-xs-12 col-sm-6">
                 <div id="charmonoCarousel" class="carousel slide" data-ride="carousel">
                   <!-- Indicators -->
@@ -810,8 +808,8 @@
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6">
-                <h1 style="font-size: 70px; padding-top: 10px;">Character Monochrome LCD</h1>
-                <h4>Displays capable of showing monochrome (single color) text and symbols, with presets in various column and row formats</h4>
+                <h1 style="font-size: 35px; padding-top: 10px;">Character Monochrome LCD</h1>
+                <h4 style="font-size: 15px;">Displays capable of showing monochrome (single color) text and symbols, with presets in various column and row formats</h4>
               </div>
             </div>
           </div>
@@ -968,7 +966,7 @@
               </tr>
             </table>
 
-            <div class="row" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
+            <div class="row prods" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
               <div class="col-xs-12 col-sm-6">
                 <div id="graphmonoCarousel" class="carousel slide" data-ride="carousel">
                   <!-- Indicators -->
@@ -1003,8 +1001,8 @@
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6">
-                <h1 style="font-size: 70px; padding-top: 10px;">Graphic Monochrome LCD</h1>
-                <h4>Displays capable of showing monochrome (single color) graphical images, with pixels arranged into various dot-matrix formats</h4>
+                <h1 style="font-size: 35px; padding-top: 10px;">Graphic Monochrome LCD</h1>
+                <h4 style="font-size: 15px;">Displays capable of showing monochrome (single color) graphical images, with pixels arranged into various dot-matrix formats</h4>
               </div>
             </div>
           </div>
@@ -1130,13 +1128,13 @@
               </tr>
             </table>
 
-            <div class="row" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
+            <div class="row prods" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
               <div class="col-xs-12 col-sm-6">
                 <img src="images/products/customSegment/CustomSegment.png" alt="Img. 1" style="width:100%;">
               </div>
               <div class="col-xs-12 col-sm-6">
-                <h1 style="font-size: 70px; padding-top: 10px;">Custom Segment Icon LCD</h1>
-                <h4>Displays capable of showing any combination of segments and custom designed icons to give any product a truly personalized feel</h4>
+                <h1 style="font-size: 35px; padding-top: 10px;">Custom Segment Icon LCD</h1>
+                <h4 style="font-size: 15px;">Displays capable of showing any combination of segments and custom designed icons to give any product a truly personalized feel</h4>
               </div>
             </div>
           </div>
@@ -1266,7 +1264,7 @@
               </tr>
             </table>
 
-            <div class="row" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
+            <div class="row prods" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
               <div class="col-xs-12 col-sm-6">
                 <div id="emsCarousel" class="carousel slide" data-ride="carousel">
                   <!-- Indicators -->
@@ -1301,8 +1299,8 @@
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6">
-                <h1 style="font-size: 70px; padding-top: 10px;">Electronics Manufacturing Services</h1>
-                <h4>Assembly Services and Product Integration done by Microtips Technology using components suggested by you or carefully selected by our team of professionals</h4>
+                <h1 style="font-size: 35px; padding-top: 10px;">Electronics Manufacturing Services</h1>
+                <h4 style="font-size: 15px;">Assembly Services and Product Integration done by Microtips Technology using components suggested by you or carefully selected by our team of professionals</h4>
               </div>
             </div>
           </div>
