Last few pictures changed. I think we're ready!

--- a/about.html
+++ b/about.html
@@ -232,7 +232,7 @@
         <p>3504 Lake Lynda Drive, Orlando, FL, 32817</p>
       </div>
       <div class="col-xs-12 col-sm-4">
-        <img class="img-responsive" src="images\about\locations\MTTW.JPG">
+        <img class="img-responsive" src="images\about\locations\MTTW.jpg">
         <h3>Taiwan</h3>
         <p>12F, No. 31, Lane 169, Kang-Ning St., Hsi-Chih District,  New Taipei City 221, Taiwan</p>
       </div>
