--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
         </div>
       </div>
       <h3>Susan Hitchcock</h3>
-      <h5>Administrative & Customer Services Manager</h5>
+      <h5>Accounting & Administrative Service Manager</h5>
     </div>
   </div>
   <div class="row" style="padding-bottom: 20px;">
@@ -213,7 +213,7 @@
         </div>
       </div>
       <h3>David Khonsary</h3>
-      <h5>Office Hottie</h5>
+      <h5>Accountant</h5>
     </div>
   </div>
 </div>
