--- a/industries.html
+++ b/industries.html
@@ -341,8 +341,9 @@
             <div class="col-xs-12 col-sm-6">
               <h4>Solutions: </h4>
               <p style="padding-left: 20px;">
-                Business Phone<br>
-                I'm not sure what else to put<br>
+                VoIP Business Phone<br>
+                Pagers<br>
+                Multi-Way Radio<br>
               </p>
             </div>
           </div>
