--- a/products.html
+++ b/products.html
@@ -104,7 +104,7 @@
         <p>For when your project needs a truly iconic look. We can provide a Custom Segment LCD with any number of segments, custom icons, and in any color.</p>
       </a>
       <a href="allProducts.html#emsTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
-        <img class="img-responsive productImage" src="images/products/EMS/ems3.png" height="200px">
+        <img class="img-responsive productImage" src="images/products/EMS/ems3.jpg" height="200px">
         <h3>EMS</h3>
         <p>Let our Electronics Manufacturing Services team take the lead for your project to provide peace of mind and effective solutions.</p>
       </a>
