Various updates to index and about pages. Slight overhaul of Distreps page

--- a/allProducts.html
+++ b/allProducts.html
@@ -78,7 +78,7 @@
         <li><a href="#charmonoTab" data-toggle="tab">Character Mono</a></li>
         <li><a href="#graphmonoTab" data-toggle="tab">Graphic Mono</a></li>
         <li><a href="#customTab" data-toggle="tab">Custom Segment</a></li>
-        <li><a href="#emsTab" data-toggle="tab">EMS</a></li>
+        <li><a href="#emsTab" data-toggle="tab">Services</a></li>
       </ul>
     </div>
     <div class="tab-content">
@@ -131,12 +131,12 @@
 
             <div class="row prods" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
               <div class="col-xs-12 col-sm-6">
-                <div id="tftCarousel" class="carousel slide" data-ride="carousel">
+                <div id="tftCarousel-mobile" class="carousel slide" data-ride="carousel">
                   <!-- Indicators -->
                   <ol class="carousel-indicators">
-                    <li data-target="#tftCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#tftCarousel" data-slide-to="1"></li>
-                    <li data-target="#tftCarousel" data-slide-to="2"></li>
+                    <li data-target="#tftCarousel-mobile" data-slide-to="0" class="active"></li>
+                    <li data-target="#tftCarousel-mobile" data-slide-to="1"></li>
+                    <li data-target="#tftCarousel-mobile" data-slide-to="2"></li>
                   </ol>
 
                   <!-- Wrapper for slides -->
@@ -154,10 +154,10 @@
                     </div>
 
                     <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#tftCarousel" data-slide="prev" style="background:none;">
+                    <a class="left carousel-control" href="#tftCarousel-mobile" data-slide="prev" style="background:none;">
                       <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
-                    <a class="right carousel-control" href="#tftCarousel" data-slide="next" style="background:none;">
+                    <a class="right carousel-control" href="#tftCarousel-mobile" data-slide="next" style="background:none;">
                       <span class="glyphicon glyphicon-chevron-right"></span>
                     </a>
                   </div>
@@ -244,7 +244,7 @@
           <div class="blueSplitter" style="margin-bottom: 10px;"></div>
           <h4>Standard: </h4>
           <p style="padding-left: 20px;">
-            Screen Sizes: 1.3 ~ 15 inches<br>
+            Screen Sizes: 1.0 ~ 15 inches<br>
             Resolutions: 128x128 ~ 1920x1200 pixels<br>
             Interfaces: CCIR, CPU, Data Enable, I2C, LVDS, MIPI, SPI, Sync, USB, VRGB<br>
             Screen Types: TN, MVA, IPS<br>
@@ -319,12 +319,12 @@
 
             <div class="row prods" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
               <div class="col-xs-12 col-sm-6">
-                <div id="oledCarousel" class="carousel slide" data-ride="carousel">
+                <div id="oledCarousel-mobile" class="carousel slide" data-ride="carousel">
                   <!-- Indicators -->
                   <ol class="carousel-indicators">
-                    <li data-target="#oledCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#oledCarousel" data-slide-to="1"></li>
-                    <li data-target="#oledCarousel" data-slide-to="2"></li>
+                    <li data-target="#oledCarousel-mobile" data-slide-to="0" class="active"></li>
+                    <li data-target="#oledCarousel-mobile" data-slide-to="1"></li>
+                    <li data-target="#oledCarousel-mobile" data-slide-to="2"></li>
                   </ol>
 
                   <!-- Wrapper for slides -->
@@ -342,10 +342,10 @@
                     </div>
 
                     <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#oledCarousel" data-slide="prev" style="background:none;">
+                    <a class="left carousel-control" href="#oledCarousel-mobile" data-slide="prev" style="background:none;">
                       <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
-                    <a class="right carousel-control" href="#oledCarousel" data-slide="next" style="background:none;">
+                    <a class="right carousel-control" href="#oledCarousel-mobile" data-slide="next" style="background:none;">
                       <span class="glyphicon glyphicon-chevron-right"></span>
                     </a>
                   </div>
@@ -719,6 +719,7 @@
           <h2>Learn More</h2>
           <div class="blueSplitter" style="margin-bottom: 10px;"></div>
           <ul>
+            <li><a href="articles/AirFuel.html">George Explains: AirFuel Wireless Power with Jordan</a></li>
             <li><a href="articles/Value_Added_Services.html">Value Added Services</a></li>
             <li><a href="articles/Microtips_OEM_Services.html">Microtips OEM Services</a></li>
           </ul>
@@ -775,12 +776,12 @@
 
             <div class="row prods" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
               <div class="col-xs-12 col-sm-6">
-                <div id="charmonoCarousel" class="carousel slide" data-ride="carousel">
+                <div id="charmonoCarousel-mobile" class="carousel slide" data-ride="carousel">
                   <!-- Indicators -->
                   <ol class="carousel-indicators">
-                    <li data-target="#charmonoCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#charmonoCarousel" data-slide-to="1"></li>
-                    <li data-target="#charmonoCarousel" data-slide-to="2"></li>
+                    <li data-target="#charmonoCarousel-mobile" data-slide-to="0" class="active"></li>
+                    <li data-target="#charmonoCarousel-mobile" data-slide-to="1"></li>
+                    <li data-target="#charmonoCarousel-mobile" data-slide-to="2"></li>
                   </ol>
 
                   <!-- Wrapper for slides -->
@@ -798,10 +799,10 @@
                     </div>
 
                     <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#charmonoCarousel" data-slide="prev" style="background:none;">
+                    <a class="left carousel-control" href="#charmonoCarousel-mobile" data-slide="prev" style="background:none;">
                       <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
-                    <a class="right carousel-control" href="#charmonoCarousel" data-slide="next" style="background:none;">
+                    <a class="right carousel-control" href="#charmonoCarousel-mobile" data-slide="next" style="background:none;">
                       <span class="glyphicon glyphicon-chevron-right"></span>
                     </a>
                   </div>
@@ -893,7 +894,7 @@
             Rear Polarizers: Reflective, Transflective, Transmissive<br>
             Fluid/Polarizers: TN, STN, FSTN, FFSTN, High Black, Ultra Black, Paper White, VLCD<br>
             IC Packages: chiponboard, chip on flex, chip on glass, TAB<br>
-            Font Generators: English Chinese, Russian/Cyrillic<br>
+            Font Generators: English, Euro, Chinese, Russian/Cyrillic<br>
           </p>
           <h4>Customizations: </h4>
           <p style="padding-left: 20px;">
@@ -968,12 +969,12 @@
 
             <div class="row prods" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
               <div class="col-xs-12 col-sm-6">
-                <div id="graphmonoCarousel" class="carousel slide" data-ride="carousel">
+                <div id="graphmonoCarousel-mobile" class="carousel slide" data-ride="carousel">
                   <!-- Indicators -->
                   <ol class="carousel-indicators">
-                    <li data-target="#graphmonoCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#graphmonoCarousel" data-slide-to="1"></li>
-                    <li data-target="#graphmonoCarousel" data-slide-to="2"></li>
+                    <li data-target="#graphmonoCarousel-mobile" data-slide-to="0" class="active"></li>
+                    <li data-target="#graphmonoCarousel-mobile" data-slide-to="1"></li>
+                    <li data-target="#graphmonoCarousel-mobile" data-slide-to="2"></li>
                   </ol>
 
                   <!-- Wrapper for slides -->
@@ -991,10 +992,10 @@
                     </div>
 
                     <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#graphmonoCarousel" data-slide="prev" style="background:none;">
+                    <a class="left carousel-control" href="#graphmonoCarousel-mobile" data-slide="prev" style="background:none;">
                       <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
-                    <a class="right carousel-control" href="#graphmonoCarousel" data-slide="next" style="background:none;">
+                    <a class="right carousel-control" href="#graphmonoCarousel-mobile" data-slide="next" style="background:none;">
                       <span class="glyphicon glyphicon-chevron-right"></span>
                     </a>
                   </div>
@@ -1266,12 +1267,12 @@
 
             <div class="row prods" style="padding-top: 20px; padding-bottom: 20px;" id="content-mobile">
               <div class="col-xs-12 col-sm-6">
-                <div id="emsCarousel" class="carousel slide" data-ride="carousel">
+                <div id="emsCarousel-mobile" class="carousel slide" data-ride="carousel">
                   <!-- Indicators -->
                   <ol class="carousel-indicators">
-                    <li data-target="#emsCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#emsCarousel" data-slide-to="1"></li>
-                    <li data-target="#emsCarousel" data-slide-to="2"></li>
+                    <li data-target="#emsCarousel-mobile" data-slide-to="0" class="active"></li>
+                    <li data-target="#emsCarousel-mobile" data-slide-to="1"></li>
+                    <li data-target="#emsCarousel-mobile" data-slide-to="2"></li>
                   </ol>
 
                   <!-- Wrapper for slides -->
@@ -1289,10 +1290,10 @@
                     </div>
 
                     <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#emsCarousel" data-slide="prev" style="background:none;">
+                    <a class="left carousel-control" href="#emsCarousel-mobile" data-slide="prev" style="background:none;">
                       <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
-                    <a class="right carousel-control" href="#emsCarousel" data-slide="next" style="background:none;">
+                    <a class="right carousel-control" href="#emsCarousel-mobile" data-slide="next" style="background:none;">
                       <span class="glyphicon glyphicon-chevron-right"></span>
                     </a>
                   </div>
