--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h1></h1>
       </div>
       <div class="col-xs-12 col-sm-6" style="color: white; text-align: right; padding: 30% 25px 30% 25px; text-shadow: 2px 2px 15px black;">
-        <h1>Providing fully custom display solutions since 1990</h1>
+        <h1>Providing Fully Custom Display Solutions Since 1990</h1>
       </div>
     </div>
   </div>
@@ -135,7 +135,7 @@
       </a>
       <a href="allProducts.html#emsTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/products/EMS/ems3.jpg" height="200px">
-        <h3>EMS</h3>
+        <h3>Value Added Services</h3>
         <p>Let our Electronics Manufacturing Services team take the lead for your project to provide peace of mind and effective solutions.</p>
       </a>
     </div>
