--- a/products.html
+++ b/products.html
@@ -105,14 +105,14 @@
       </a>
       <a href="allProducts.html#emsTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/products/EMS/ems3.jpg" height="200px">
-        <h3>EMS</h3>
+        <h3>Value Added Services</h3>
         <p>Let our Electronics Manufacturing Services team take the lead for your project to provide peace of mind and effective solutions.</p>
       </a>
     </div>
   </div>
   <div class="blueSplitter"></div>
   <div class="col-xs-12" style="">
-    <h2 style="margin-top: 11px;">Featured Products</h2>
+    <h2 style="margin-top: 15px; margin-bottom: 15px;">Featured Products</h2>
   </div>
   <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRXn_bOvZinFqSQWjqpH90TJ3U0OdUZnHYobOKhmyenxDereTEJgySDQQ_hbSJUcDx4Mi0Od-hKyIB7/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
   <div class="blueSplitter" style="margin-top: 10px;"></div>
