Trying out a new Industries page.

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
       <div class="item aboutItem"></div>
     </div>
   </div>
-  <h1 class="headerWords" style="padding-top: 250px; padding-bottom: 250px;">About Us</h1>
+  <h1 class="headerWords" style="padding-top: 250px; padding-bottom: 250px; min-height: 50%">About Us</h1>
 </div>
 
 <div id="content-mobile">
