--- a/industries.html
+++ b/industries.html
@@ -80,7 +80,7 @@
   </div>
 </div>
 
-<div class="navbar nav">
+<nav class="navbar nav">
   <div class="tabbable"> <!-- Only required for left/right tabs -->
     <div class="container">
       <ul class="nav nav-tabs nav-justified">
@@ -360,7 +360,7 @@
       </div>
     </div>
   </div>
-</div>
+</nav>
 
 <div class="subsection">
   <div class="container">
