Updated powerpoints to microsoft based. Still need to update the content.

--- a/industries.html
+++ b/industries.html
@@ -156,7 +156,8 @@
         <div>
           <h2 style="margin-top: 10px;">Featured Automotive Products</h2>
         </div>
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vREs7OZHfkxfDelhy_QNBuahD6pBnnVN6JdHqQJFNMvgXh4fwguckxOD0iUEBpMWwJrVOywhYyJB_jb/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
       </div>
     </div>
 
@@ -199,7 +200,8 @@
         <div>
           <h2 style="margin-top: 10px;">Featured Industrial Products</h2>
         </div>
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSh1Bm_eseLQcOx5yQM-0bDC2kedaDc32DH2-JwystWuWUfjmJTfPqg4Ore46wObmN0bOy1vVUKQZhA/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
       </div>
     </div>
 
@@ -243,7 +245,8 @@
         <div>
           <h2 style="margin-top: 10px;">Featured Medical Products</h2>
         </div>
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRjDm5imCeYw5hu3P0jFgb-d_suBfyn64JCk6q8P2UUzPue9EDVPiAnuT_g_BtMwLv331FyNRO4MzRW/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
       </div>
     </div>
 
@@ -287,7 +290,8 @@
         <div>
           <h2 style="margin-top: 10px;">Featured Consumer Products</h2>
         </div>
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSLPandX2Au1K1AN7b6V03jlP3a6YwVOwML8pHG1xqx777Oh_rxNT437WDMeqwqfG5Bw6IufA8jhQBP/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
       </div>
     </div>
 
@@ -330,7 +334,8 @@
         <div>
           <h2 style="margin-top: 10px;">Featured HVAC Products</h2>
         </div>
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ8qnDmrNTOxipUgN4YBsn9WAjXcIH4kNiVCvwDjqv6cO2IvHGZG9ouEpu60R69aJYdh81HTDe9L3ak/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
       </div>
     </div>
 
@@ -372,7 +377,6 @@
         <div>
           <h2 style="margin-top: 10px;">Featured Telecom Products</h2>
         </div>
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTqwSUAmZ29nBV8Go0GDOhPXwPCFBuFxy8P1B3QmrmGjVdL2qk8Quvqa8ZCrzCYr3nUb4RZzQYmfKdU/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
         <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
       </div>
