--- a/products.html
+++ b/products.html
@@ -114,7 +114,8 @@
   <div class="col-xs-12" style="">
     <h2 style="margin-top: 15px; margin-bottom: 15px;">Featured Products</h2>
   </div>
-  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRXn_bOvZinFqSQWjqpH90TJ3U0OdUZnHYobOKhmyenxDereTEJgySDQQ_hbSJUcDx4Mi0Od-hKyIB7/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+  <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+  <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
   <div class="blueSplitter" style="margin-top: 10px;"></div>
 </div>
 
